<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.shreyas208.gradecalculator.app.AboutActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            style="@style/App.AboutTextField"
            android:text="@string/app_name"
            android:textSize="30sp" />
        <TextView
            style="@style/App.AboutTextField"
            android:text="@string/about_version"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <TextView
            style="@style/App.AboutTextField"
            android:text="@string/about_email"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:autoLink="email"/>
        <TextView
            style="@style/App.AboutTextField"
            android:text="@string/about_copyright"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>
        </LinearLayout>
</LinearLayout>